--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,18 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      # Linux Specific Setup
+      - name: Install Linux Build Dependencies
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo snap install snapcraft --classic
+          sudo apt-get update
+          sudo apt-get install -y libarchive-tools python3
+
+      - name: Fix app-builder permissions
+        if: matrix.os == 'ubuntu-latest'
+        run: chmod +x node_modules/.pnpm/app-builder-bin*/node_modules/app-builder-bin/linux/x64/app-builder || true
+
       # Linux Build
       - name: Build Linux
         if: matrix.os == 'ubuntu-latest'
