--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,14 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Set Version from Tag
+        if: startsWith(github.ref, 'refs/tags/')
+        shell: bash
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "Setting version to $VERSION"
+          npm version $VERSION --no-git-tag-version --allow-same-version
+
       # Linux Specific Setup
       - name: Install Linux Build Dependencies
         if: matrix.os == 'ubuntu-latest'
