--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           sudo snap install snapcraft --classic
           sudo apt-get update
-          sudo apt-get install -y libarchive-tools python3
+          sudo apt-get install -y libarchive-tools python3 fuse
 
       - name: Fix app-builder permissions
         if: matrix.os == 'ubuntu-latest'
