feat(roll-tables): :sparkles: implement random tables and donation support
- Add RollTables view with CRUD and dice roller functionality - Integrate TagSelector for consistent game system management - Enable roll tables access from Dashboard and Campaign views - Add Ko-fi donation button in Settings - Update English and Spanish translations

https://github.com/mvergaral/dm-toolbox/issues/2 https://github.com/mvergaral/dm-toolbox/issues/1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
   },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "conventionalCommits.scopes": [
+    "roll-tables"
+  ]
 }
