chore(docs): establish conventional commits in contributing.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "conventionalCommits.scopes": [
-    "roll-tables"
+    "roll-tables",
+    "docs"
   ]
 }
