--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dm-toolbox",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -18,7 +18,8 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win -p never",
     "build:mac": "electron-vite build && electron-builder --mac -p never",
-    "build:linux": "electron-vite build && electron-builder --linux -p never"
+    "build:linux": "electron-vite build && electron-builder --linux -p never",
+    "release": "standard-version"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
@@ -58,6 +59,7 @@
     "prettier": "^3.7.4",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "vite": "^7.2.6"
